# hakyll-cms

./: .gitmodules  Main.hs  README.md  deploy.sh  hakyll-cms.cabal  stack-ghcjs.yaml  stack.yaml  technical-report.md
api/: ChangeLog.md  api.cabal
api-server/: LICENSE  api-server.cabal  stack.yaml
api-server/src/Hakyll/CMS/: API.hs  Server.hs  Types.hs
api-server/src/Hakyll/CMS/Server/: Internal.hs
api/src/Hakyll/CMS/: API.hs
client/: Main.hs  README.md  client.cabal  stack-ghcjs.yaml  stack.yaml
client/Hakyll/CMS/: ServerCalls.hs
client/src/: Main.hs
client/static/: client.css
client/style/: client.css
lib/Reflex/Dom/: SimpleMDE.hs
server/: LICENSE  server.cabal  stack.yaml
shared/: shared.cabal
shared/src/HakyllCms/: Shared.hs
simple-mde/: simple-mde.cabal  stack-ghcjs.yaml  stack.yaml
simple-mde/examples/hello-world/: Main.hs  hello-world.cabal  stack-ghcjs.yaml  stack.yaml
simple-mde/jslib/: test.js
simple-mde/src/Reflex/Dom/: SimpleMDE.hs
