name:                hakyll-cms
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
maintainer:          peacemotion@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable hakyll-cms
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , api-server
                     , classy-prelude >= 1.0.2 && < 2
                     , warp >= 3.2.11 && < 4
  default-language:    Haskell2010
