name:                client
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Gabriel Pickl, Kevin Singer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable client-output
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , shared
  default-language:    Haskell2010