name:                client
version:             0.1.0.0
license:             BSD3
maintainer:          peacemotion@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable client
  main-is:             Main.hs
  build-depends:       base
                     , reflex >= 0.5 && < 0.6
                     , reflex-dom-core >= 0.4 && < 0.5
                     , reflex-dom-contrib >= 0.5.1 && < 0.6
                     , jsaddle-warp >= 0.8.3.1 && < 0.9
                     , jsaddle >= 0.8.3.2 && < 0.9
                     , text >= 1.2.2.1 && <1.3
                     , simple-mde
  default-language:    Haskell2010
