name:                client
version:             0.1.0.0
license:             BSD3
maintainer:          peacemotion@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable client
  main-is:             Main.hs
  other-modules:       Hakyll.CMS.ServerCalls
  build-depends:       base
                     , reflex >= 0.5 && < 0.6
                     , reflex-dom-core >= 0.4 && < 0.5
                     , reflex-dom-contrib >= 0.5.1 && < 0.6
                     , reflex-dom-semui >= 0.1 && < 0.2
                     , jsaddle-warp >= 0.8.3.1 && < 0.9
                     , jsaddle >= 0.8.3.2 && < 0.9
                     , text >= 1.2.2.1 && <1.3
                     , bytestring >= 0.10.8.1 && < 0.11
                     , uri-bytestring >= 0.2.2.1 && <0.3
                     , servant >= 0.8.1 && < 0.9
                     , servant-client >= 0.8.1 && < 0.9
                     , http-client >= 0.4.31.2 && < 0.5
                     , transformers >= 0.5.2.0 && < 0.6
                     , containers >= 0.5.7.1 && < 0.6
                     , file-embed >= 0.0.10 && < 0.1
                     , data-default >= 0.7.1.1 && < 0.8
                     , lens >= 4.14 && < 5
                     , simple-mde
                     , api
  if impl(ghcjs)
    build-depends:     ghcjs-base >= 0.2.0.0 && <0.3

  default-language:    Haskell2010
