name:                server
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Gabriel Pickl, Kevin Singer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , shared
