name:                simple-mde
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
maintainer:          peacemotion@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Dom.SimpleMDE
  hs-source-dirs:      src
  build-depends:       base >=4.9 && < 4.10
                     , data-default >= 0.7.1 && < 0.8
                     , lens >= 4.14 && < 5
                     , reflex >= 0.5 && < 0.6
                     , reflex-dom >= 0.4 && < 0.5
  default-language:    Haskell2010
